feat(dataset): remove id column

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -958,6 +958,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('id', axis=1)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
