feat: add map inference

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -750,6 +750,11 @@
     "def inference(model, evidence):\n",
     "    infer = VariableElimination(model)\n",
     "    q = infer.query(variables=['cardio_disease'], evidence=evidence)\n",
+    "    return q\n",
+    "\n",
+    "def map_inference(model, evidence):\n",
+    "    infer = VariableElimination(model)\n",
+    "    q = infer.map_query(variables=['cardio_disease'], evidence=evidence)\n",
     "    return q"
    ]
   },
@@ -963,7 +968,53 @@
     }
    ],
    "source": [
-    "q = inference(model, evidence= {'age': 60, 'gender': 2, 'height': 170, 'weight': 70, 'ap_hi': 120, 'ap_lo': 80, 'cholesterol': 1, 'gluc': 1, 'smoke': 0, 'alco': 0, 'active': 1})\n",
+    "q = inference(model, evidence= {'age': 20, 'gender': 2, 'height': 170, 'weight': 70, 'ap_hi': 120, 'ap_lo': 80, 'cholesterol': 1, 'gluc': 1, 'smoke': 0, 'alco': 0, 'active': 1})\n",
+    "print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b8233c73b4d490ea7ab2c90492733b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f38ea6052d4f4a58ae271961b5557908",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cardio_disease': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "q = map_inference(model, evidence= {'age': 60, 'gender': 2, 'height': 170, 'weight': 70, 'ap_hi': 120, 'ap_lo': 80, 'cholesterol': 1, 'gluc': 1, 'smoke': 0, 'alco': 0, 'active': 1})\n",
     "print(q)"
    ]
   },
