feat: add model save

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -1543,6 +1543,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pgmpy.readwrite import ProbModelXMLWriter, get_probmodel_data\n",
+    "model = best_model.copy()\n",
+    "model_data = get_probmodel_data(model)\n",
+    "writer = ProbModelXMLWriter(model_data=model_data)\n",
+    "print(writer.__str__().decode('utf-8'))\n",
+    "writer.write_file('six_var_exhaustive.pgmx')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
