refactor: tree_search_structure_learning add root_node parameter

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -810,12 +810,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tree_search_structure_learning(train_data, estimator_type): # score_method [\"chow-liu\", \"tan\"]\n",
-    "    est = TreeSearch(train_data, root_node='cardio_disease')\n",
+    "def tree_search_structure_learning(train_data, estimator_type, root_node='cardio_disease'): # score_method [\"chow-liu\", \"tan\"]\n",
+    "    est = TreeSearch(train_data, root_node=root_node)\n",
     "    best_model = est.estimate(estimator_type=estimator_type)\n",
     "    return best_model"
    ]
