refactor: move 'remove outliers' to separate section

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -871,53 +871,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_test_pred_y(model):\n",
+    "    test_data = pd.read_csv('cardio_test_set.csv', sep=';')\n",
+    "    prediction_dataset = test_data.drop([\"cardio_disease\"], axis=1)\n",
+    "    return test_data['cardio_disease'].values, model.predict(prediction_dataset)\n",
+    "\n",
+    "def accuracy(model):\n",
+    "    y_test, y_pred = get_test_pred_y(model)\n",
+    "    return accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "def roc_curve(model):\n",
+    "    # calcola la curva ROC e l'AUC\n",
+    "    y_test, y_pred = get_test_pred_y(model)\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, y_pred)\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "\n",
+    "    # plotta la curva ROC\n",
+    "    plt.plot(fpr, tpr, color='darkorange', lw=2, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+    "    plt.plot([0, 1], [0, 1], color='navy', lw=2, linestyle='--')\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.title('Receiver Operating Characteristic')\n",
+    "    plt.legend(loc=\"lower right\")\n",
+    "    plt.show()\n",
+    "\n",
+    "def inference(model, evidence):\n",
+    "    infer = VariableElimination(model)\n",
+    "    q = infer.query(variables=['cardio_disease'], evidence=evidence)\n",
+    "    return q\n",
+    "\n",
+    "def map_inference(model, evidence):\n",
+    "    infer = VariableElimination(model)\n",
+    "    q = infer.map_query(variables=['cardio_disease'], evidence=evidence)\n",
+    "    return q"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Study Case 0 - Baseline"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Remove Outliers\n",
-    "The boxplots show the presence of several outliers. Considering the dataset of 70K samples, it is reasonable to assume that there are some exceptional cases related to physical conditions. Below, we use the Interquartile range (IQR) method to analyze and remove the outliers."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def outliers(df, feature, factor=1.5):\n",
-    "    q1 = df[feature].quantile(0.25)\n",
-    "    q3 = df[feature].quantile(0.75)\n",
-    "    iqr = q3 - q1\n",
-    "\n",
-    "    lower_bound = q1 - factor * iqr\n",
-    "    upper_bound = q3 + factor * iqr\n",
-    "\n",
-    "    ls = df.index[(df[feature] < lower_bound) | (df[feature] > upper_bound)]\n",
-    "    return ls\n",
-    "\n",
-    "def remove(df, ls):\n",
-    "    ls = sorted(set(ls))\n",
-    "    df = df.drop(ls)\n",
-    "    return df\n",
-    "\n",
-    "def remove_outliers(dataset, features=[\"age\", \"height\", \"weight\", \"ap_hi\", \"ap_lo\"], factor=1.5):\n",
-    "    index_list = []\n",
-    "    for feature in features:\n",
-    "        index_list.extend(outliers(dataset, feature, factor))\n",
-    "\n",
-    "    dataset = remove(dataset, index_list)\n",
-    "    print(\"Number of outliers removed:\", len(index_list))\n",
-    "    print(\"Number of rows left:\", len(dataset))\n",
-    "    return dataset"
    ]
   },
   {
