refactor: rename parameter_estimation to mle_parameter_estimation

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -851,12 +851,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Maximum Likelihood Estimator\n",
+    "Bello ma overfitta, fa una analisi in frequenza del dataset e calcola le CPD, affetto da overfitting pesante sui dati."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parameters_estimation(est_model, train_data):\n",
+    "def mle_parameters_estimation(est_model, train_data):\n",
     "    model = BayesianNetwork(est_model.edges())\n",
     "    model.fit(data=train_data, estimator=MaximumLikelihoodEstimator)\n",
     "    return model"
@@ -1454,7 +1463,7 @@
     }
    ],
    "source": [
-    "model = parameters_estimation(best_model, train_data)\n",
+    "model = mle_parameters_estimation(best_model, train_data)\n",
     "try:\n",
     "    print(accuracy(model))\n",
     "except Exception as e:\n",
@@ -1924,7 +1933,7 @@
     }
    ],
    "source": [
-    "model = parameters_estimation(best_model, train_data)\n",
+    "model = mle_parameters_estimation(best_model, train_data)\n",
     "try:\n",
     "    print(accuracy(model))\n",
     "except Exception as e:\n",
@@ -2496,7 +2505,7 @@
     }
    ],
    "source": [
-    "model = parameters_estimation(best_model, train_data)\n",
+    "model = mle_parameters_estimation(best_model, train_data)\n",
     "try:\n",
     "    print(accuracy(model))\n",
     "except Exception as e:\n",
