feat: add bayesian parameter estimation

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -63,7 +63,7 @@
     "from sklearn.metrics import roc_curve, auc\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, f1_score\n",
-    "from pgmpy.estimators import PC, HillClimbSearch, TreeSearch, ExhaustiveSearch, MaximumLikelihoodEstimator\n",
+    "from pgmpy.estimators import PC, HillClimbSearch, TreeSearch, ExhaustiveSearch, MaximumLikelihoodEstimator, BayesianEstimator\n",
     "from pgmpy.models import BayesianNetwork\n",
     "from pgmpy.inference import VariableElimination\n"
    ]
@@ -869,6 +869,27 @@
     "    model = BayesianNetwork(est_model.edges())\n",
     "    model.fit(data=train_data, estimator=MaximumLikelihoodEstimator)\n",
     "    return model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bayesian Parameter Estimation\n",
+    "Inizia con una prior CPD e la migliora secondo delle euristiche, K2 o BDeu. Più conservativo, ma meno affetto da overfitting in quanto vedi parametro `equivalent_sample_size`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bpe_parameters_estimation(est_model, train_data):\n",
+    "    model = BayesianNetwork(est_model.edges())\n",
+    "    model.fit(train_data, estimator=BayesianEstimator, prior_type=\"BDeu\") # default equivalent_sample_size=5\n",
+    "    return model\n"
    ]
   },
   {
