fix: remove outliers

--- a/cardiovascular_desease.ipynb
+++ b/cardiovascular_desease.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,6 +715,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remove Outliers\n",
+    "The boxplots show the presence of several outliers. Considering the dataset of 70K samples, it is reasonable to assume that there are some exceptional cases related to physical conditions. Below, we use the Interquartile range (IQR) method to analyze and remove the outliers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def outliers(df, feature, factor=1.5):\n",
+    "    q1 = df[feature].quantile(0.25)\n",
+    "    q3 = df[feature].quantile(0.75)\n",
+    "    iqr = q3 - q1\n",
+    "\n",
+    "    lower_bound = q1 - factor * iqr\n",
+    "    upper_bound = q3 + factor * iqr\n",
+    "\n",
+    "    ls = df.index[(df[feature] < lower_bound) | (df[feature] > upper_bound)]\n",
+    "    return ls\n",
+    "\n",
+    "def remove(df, ls):\n",
+    "    ls = sorted(set(ls))\n",
+    "    df = df.drop(ls)\n",
+    "    return df\n",
+    "\n",
+    "def remove_outliers(dataset, features=[\"age\", \"height\", \"weight\", \"ap_hi\", \"ap_lo\"], factor=1.5):\n",
+    "    index_list = []\n",
+    "    for feature in features:\n",
+    "        index_list.extend(outliers(dataset, feature, factor))\n",
+    "\n",
+    "    dataset = remove(dataset, index_list)\n",
+    "    print(\"Number of outliers removed:\", len(index_list))\n",
+    "    print(\"Number of rows left:\", len(dataset))\n",
+    "    return dataset"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -734,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,15 +992,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of outliers removed: 8409\n",
-      "Number of rows left: 62502\n"
+     "ename": "NameError",
+     "evalue": "name 'remove_outliers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m dataset \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mcopy()\n\u001b[0;32m----> 2\u001b[0m dataset \u001b[39m=\u001b[39m remove_outliers(dataset)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'remove_outliers' is not defined"
      ]
     }
    ],
@@ -2573,7 +2617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
